// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto.catalog;

// Specifies a view of asset information with a particular level of detail.
enum AssetViewType {
  // The default/unset value (depends on the RPC being called).
  ASSET_VIEW_TYPE_UNSPECIFIED = 0;

  // Provides minimal, basic metadata about the asset.
  //
  // Includes the following metadata fields:
  // * asset_type
  // * id_version
  ASSET_VIEW_TYPE_BASIC = 1;

  // Provides detailed metadata about the asset.
  //
  // Includes the following metadata fields:
  // * asset_tag
  // * asset_type
  // * display_name
  // * documentation
  // * id_version
  // * vendor
  //
  // Also includes any asset-specific metadata.
  ASSET_VIEW_TYPE_DETAIL = 2;

  // Provides metadata that distinguish versions of the asset.
  //
  // Includes the following metadata fields:
  // * asset_type
  // * id_version
  // * release_notes
  // * release_tag
  // * update_time
  // * vendor
  ASSET_VIEW_TYPE_VERSIONS = 3;

  // Provides all metadata fields.
  ASSET_VIEW_TYPE_ALL_METADATA = 4;

}
